# baras-the-wide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  latest.json
.github/workflows/: build.yml  release.yml
.planning/: STATE.md
.planning/quick/001-encounter-timers-a-b-display-targets/: 001-PLAN.md
.planning/quick/003-encounters-settings-subsection-timers-ab/: 003-SUMMARY.md
.planning/quick/004-raid-frames-optional-icon-support-charge/: 004-PLAN.md  004-SUMMARY.md
.planning/quick/005-unsaved-changes-indicator-editors/: 005-PLAN.md
app/: Cargo.toml  Dioxus.toml
app/assets/: data-explorer.css  styles.css
app/src/: api.rs  app.rs  types.rs
app/src-tauri/: CHANGELOG.md  CHANGELOG_V2026.2.8.md  CHANGELOG_old.md  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bridge.rs  hotkeys.rs  lib.rs  overlay.rs  router.rs  service.rs  tray.rs  updater.rs  (+1 more)
cli/src/: commands.rs  context.rs  dir_watcher.rs  main.rs
core/: Cargo.toml  build.rs
core/data/: attack_types.csv  off_gcd.json
core/src/: directory_watcher.rs  encounter.bak  encounter.rs  file_handler.rs  lib.rs  session_cache.bak  session_cache.rs
overlay/: Cargo.toml
overlay/src/: frame.rs  icons.rs  lib.rs  main.rs  manager.rs  renderer.rs  utils.rs
parse-worker/src/: main.rs
src/: app_state.rs  commands.rs  encounter.rs  event_models.rs  lib.rs  log_ids.rs  main.rs  parser.rs  reader.rs  session_cache.rs
src/parser/: tests.rs
test-log-files/small/: test-tail.txt
types/: Cargo.toml
types/src/: formatting.rs  lib.rs
validate/src/: main.rs
(+173 files in other folders)
